--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/svelte": "^1.0.2",
     "@astrojs/tailwind": "^2.1.3",
     "astro": "^1.6.15",
+    "lodash": "^4.17.21",
     "svelte": "^3.55.0",
     "tailwindcss": "^3.2.4"
   }
