--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@astrojs/svelte": "^1.0.2",
     "@astrojs/tailwind": "^2.1.3",
+    "askerjs": "^1.3.2",
     "astro": "^1.6.15",
     "lodash": "^4.17.21",
     "svelte": "^3.55.0",
